...
        static let markRead = NSLocalizedString("Mark Read", comment: "")
        static let unread = NSLocalizedString("Unread", comment: "")
        static let ok = NSLocalizedString("OK", comment: "")
        static let cancel = NSLocalizedString("Cancel", comment: "")
        static let yes = NSLocalizedString("Yes", comment: "")
        static let no = NSLocalizedString("No", comment: "")
        static let signin = NSLocalizedString("Sign in", comment: "")
        static let signout = NSLocalizedString("Sign out", comment: "")
        static let open = NSLocalizedString("Open", comment: "")
        static let close = NSLocalizedString("Close", comment: "")
        static let closed = NSLocalizedString("Closed", comment: "")
        static let reopen = NSLocalizedString("Reopen", comment: "")
        static let reopened = NSLocalizedString("Reopened", comment: "")
...
